Fix navbar link alignment (#54)

--- a/packages/client/src/app/icon-link/icon-link.module.css
+++ b/packages/client/src/app/icon-link/icon-link.module.css
@@ -1,3 +1,4 @@
 .component-root {
   border: none;
+  line-height: 0;
 }
